--- a/app/src/main/res/layout/dialog_search_subtitle.xml
+++ b/app/src/main/res/layout/dialog_search_subtitle.xml
@@ -1,98 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+<FrameLayout
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
-        android:layout_width="@dimen/vs_960"
-        android:layout_height="@dimen/vs_480"
         android:layout_gravity="center"
-        android:background="#6632364E"
         android:orientation="vertical"
-        android:padding="@dimen/vs_30">
-
+        android:background="@drawable/shape_dialog_bg_main"
+        android:padding="@dimen/vs_30"
+        android:layout_width="@dimen/vs_960"
+        android:layout_height="@dimen/vs_480">
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
             <EditText
+                android:textSize="@dimen/ts_26"
+                android:textColor="@color/color_85000000"
+                android:textColorHint="@color/color_80000000"
                 android:id="@+id/input"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="@drawable/input_search"
-                android:hint="请输入字幕名称"
-                android:inputType="text"
-                android:maxLines="1"
+                android:background="@drawable/input_search_1"
                 android:paddingLeft="@dimen/vs_20"
                 android:paddingTop="@dimen/vs_10"
                 android:paddingRight="@dimen/vs_2"
                 android:paddingBottom="@dimen/vs_10"
-                android:textColor="@color/color_FFFFFF"
-                android:textColorHint="@color/color_6CFFFFFF"
-                android:textSize="@dimen/ts_26" />
-
-            <TextView
-                android:id="@+id/inputSubmit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginLeft="@dimen/vs_5"
-                android:background="@drawable/button_dialog_main"
-                android:focusable="true"
-                android:gravity="center"
-                android:padding="@dimen/vs_10"
-                android:text="搜索"
+                android:hint="请输入字幕名称"
+                android:maxLines="1"
+                android:layout_weight="1.0"
+                android:inputType="text"/>
+            <TextView
+                android:textSize="@dimen/ts_22"
                 android:textColor="@color/color_FFFFFF"
-                android:textSize="@dimen/ts_22" />
+                android:gravity="center"
+                android:layout_gravity="center"
+                android:id="@+id/inputSubmit"
+                android:background="@drawable/button_dialog_main"
+                android:padding="@dimen/vs_10"
+                android:focusable="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/vs_5"
+                android:text="搜索"/>
         </LinearLayout>
-
         <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|center_horizontal"
+            android:layout_gravity="center|top"
             android:focusable="false"
             android:focusableInTouchMode="false"
-            android:layout_marginTop="@dimen/vs_10"
-            android:scrollbars="none">
-
+            android:scrollbars="none"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/vs_10">
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top|center_horizontal"
-                android:clipChildren="false"
-                android:clipToPadding="false"
+                android:layout_gravity="center|top"
+                android:orientation="vertical"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
-                android:orientation="vertical">
-
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content">
                 <com.owen.tvrecyclerview.widget.TvRecyclerView
                     android:id="@+id/mGridView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
                     android:clipChildren="false"
                     android:clipToPadding="false"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent"
                     app:tv_horizontalSpacingWithMargins="@dimen/vs_5"
                     app:tv_selectedItemIsCentered="true"
-                    app:tv_verticalSpacingWithMargins="@dimen/vs_5" />
-
+                    app:tv_verticalSpacingWithMargins="@dimen/vs_5"/>
             </LinearLayout>
-
         </ScrollView>
-
-
         <ProgressBar
+            android:layout_gravity="center"
             android:id="@+id/loadingBar"
+            android:visibility="gone"
             android:layout_width="@dimen/vs_50"
             android:layout_height="@dimen/vs_50"
-            android:layout_gravity="center"
-            android:indeterminateBehavior="repeat"
-            android:indeterminateDrawable="@drawable/anim_loading"
             android:indeterminateOnly="true"
-            android:visibility="gone" />
-
+            android:indeterminateDrawable="@drawable/anim_loading"
+            android:indeterminateBehavior="repeat"/>
     </LinearLayout>
-
 </FrameLayout>
