--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     android:id="@+id/live_root"
     android:layout_width="fill_parent"
@@ -15,11 +14,80 @@
         android:orientation="vertical"
         android:id="@+id/backcontroller"
         android:paddingBottom="0.0dip"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_marginBottom="0.0dip"
         android:layout_weight="1.0">
+        <LinearLayout
+            android:layout_gravity="top|center|left"
+            android:orientation="horizontal"
+            android:background="@drawable/shape_thumb_bottom_name"
+            android:visibility="visible"
+            android:layout_width="230.0px"
+            android:layout_height="110.0px"
+            android:layout_marginTop="0.0px"
+            android:minWidth="230.0px">
+            <ImageView
+                android:id="@+id/iv_back_bg"
+                android:layout_width="90.0px"
+                android:layout_height="90.0px"
+                android:layout_marginTop="5.0px"
+                android:layout_marginLeft="10.0px"
+                android:src="@drawable/app_icon"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentBottom="true"/>
+            <LinearLayout
+                android:layout_gravity="top|center|right"
+                android:orientation="vertical"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:textSize="30.0px"
+                    android:textColor="#fffcffff"
+                    android:ellipsize="marquee"
+                    android:layout_gravity="center"
+                    android:id="@+id/tv_right_top_epg_name"
+                    android:paddingLeft="0.0px"
+                    android:paddingTop="5.0px"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="0.0dip"
+                    android:layout_marginRight="0.0dip"
+                    android:text="测试频道"
+                    android:singleLine="true"
+                    android:layout_toRightOf="@+id/iv_back_bg"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentRight="true"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:paddingStart="10.0px"
+                    android:layout_marginStart="0.0dip"
+                    android:layout_marginEnd="0.0dip"/>
+                <TextView
+                    android:textSize="30.0px"
+                    android:textColor="#fffcffff"
+                    android:ellipsize="marquee"
+                    android:gravity="center"
+                    android:layout_gravity="center"
+                    android:id="@+id/tv_right_top_type"
+                    android:paddingLeft="0.0px"
+                    android:paddingBottom="5.0px"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="0.0dip"
+                    android:layout_marginRight="0.0dip"
+                    android:text="回看中"
+                    android:singleLine="true"
+                    android:layout_toRightOf="@+id/iv_back_bg"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentBottom="true"
+                    android:marqueeRepeatLimit="marquee_forever"
+                    android:paddingStart="10.0px"
+                    android:layout_marginStart="0.0dip"
+                    android:layout_marginEnd="0.0dip"/>
+            </LinearLayout>
+        </LinearLayout>
         <LinearLayout
             android:gravity="center"
             android:orientation="vertical"
@@ -36,7 +104,8 @@
                 android:layout_height="120.0sp"/>
         </LinearLayout>
         <LinearLayout
-            android:gravity="center"
+            android:gravity="bottom"
+            android:layout_gravity="bottom|center"
             android:orientation="vertical"
             android:background="@drawable/shape_dialog_filter_bg"
             android:paddingLeft="10.0dip"
@@ -44,7 +113,7 @@
             android:paddingRight="10.0dip"
             android:paddingBottom="0.0dip"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:layout_marginLeft="@dimen/vs_0"
             android:layout_marginRight="@dimen/vs_0"
             android:layout_marginBottom="@dimen/vs_0">
@@ -382,8 +451,8 @@
     <RelativeLayout
         android:gravity="center_vertical"
         android:layout_gravity="bottom|center"
-        android:background="@drawable/shape_dialog_filter_bg"
         android:id="@+id/ll_epg"
+        android:background="@drawable/shape_dialog_filter_bg"
         android:paddingBottom="0.0dip"
         android:layout_width="fill_parent"
         android:layout_height="@dimen/vs_300">
@@ -477,6 +546,7 @@
                 android:layout_gravity="bottom|center"
                 android:id="@+id/tv_channel_bar_name"
                 android:paddingTop="0.0dip"
+                android:paddingBottom="10.0dip"
                 android:layout_width="@dimen/vs_200"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5.0dip"
@@ -484,7 +554,6 @@
                 android:layout_marginRight="5.0dip"
                 android:text="CCTV 高清"
                 android:singleLine="true"
-                android:paddingBottom="10.0dip"
                 android:layout_alignLeft="@+id/tv_channel_bottom_number"
                 android:layout_alignRight="@+id/tv_channel_bottom_number"
                 android:layout_alignParentBottom="true"
@@ -618,11 +687,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <RelativeLayout
-        android:layout_gravity="bottom|center|left"
+        android:layout_gravity="top|center|left"
         android:orientation="vertical"
         android:id="@+id/ll_right_top_huikan"
         android:background="@drawable/shape_thumb_bottom_name"
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="290.0px"
         android:layout_height="100.0px"
         android:layout_marginTop="40.0px"
@@ -696,8 +765,8 @@
             android:id="@+id/iv_circle_bg"
             android:layout_width="@dimen/vs_50"
             android:layout_height="@dimen/vs_50"
-            android:layout_marginRight="@dimen/vs_30"
             android:layout_marginTop="5.0mm"
+            android:layout_marginRight="@dimen/vs_30"
             android:src="@drawable/app_icon"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"/>
@@ -714,10 +783,10 @@
             android:textColor="#fffcffff"
             android:ellipsize="marquee"
             android:gravity="center"
-            android:layout_marginTop="10.0mm"
             android:id="@+id/tv_right_top_channel_name"
             android:layout_width="@dimen/vs_150"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10.0mm"
             android:layout_marginRight="@dimen/vs_5"
             android:text="测试频道"
             android:singleLine="true"
@@ -731,10 +800,10 @@
             android:textColor="#fffcffff"
             android:gravity="center"
             android:layout_gravity="center"
-            android:layout_marginTop="10.0mm"
             android:id="@+id/tv_right_top_tipnetspeed"
             android:layout_width="@dimen/vs_150"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10.0mm"
             android:layout_marginRight="@dimen/vs_5"
             android:text=""
             android:layout_toLeftOf="@+id/tv_right_top_channel_name"
