--- a/app/src/main/res/layout/activity_live_play.xml
+++ b/app/src/main/res/layout/activity_live_play.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout
     android:id="@+id/live_root"
     android:layout_width="fill_parent"
@@ -20,10 +21,11 @@
         android:layout_marginBottom="0.0dip"
         android:layout_weight="1.0">
         <LinearLayout
-            android:layout_gravity="top|center|left"
+            android:layout_gravity="center|left|top"
             android:orientation="horizontal"
             android:background="@drawable/shape_thumb_bottom_name"
             android:visibility="visible"
+            android:id="@+id/ll_right_top_huikan"
             android:layout_width="280.0px"
             android:layout_height="100.0px"
             android:layout_marginTop="0.0px"
@@ -32,14 +34,14 @@
                 android:id="@+id/iv_back_bg"
                 android:layout_width="90.0px"
                 android:layout_height="90.0px"
-                android:layout_marginTop="5.0px"
                 android:layout_marginLeft="20.0px"
+                android:layout_marginTop="5.0px"
                 android:src="@drawable/app_icon"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentBottom="true"/>
             <LinearLayout
-                android:layout_gravity="top|center|right"
+                android:layout_gravity="center|right|top"
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
@@ -687,9 +689,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <RelativeLayout
-        android:layout_gravity="top|center|left"
+        android:layout_gravity="center|left|top"
         android:orientation="vertical"
-        android:id="@+id/ll_right_top_huikan"
         android:background="@drawable/shape_thumb_bottom_name"
         android:visibility="gone"
         android:layout_width="290.0px"
@@ -697,59 +698,6 @@
         android:layout_marginTop="40.0px"
         android:layout_marginRight="50.0px"
         android:minWidth="270.0px">
-        <ImageView
-            android:id="@+id/iv_back_bg"
-            android:layout_width="90.0px"
-            android:layout_height="90.0px"
-            android:layout_marginLeft="10.0px"
-            android:src="@drawable/app_icon"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentBottom="true"/>
-        <TextView
-            android:textSize="30.0px"
-            android:textColor="#fffcffff"
-            android:ellipsize="marquee"
-            android:gravity="center"
-            android:id="@+id/tv_right_top_epg_name"
-            android:paddingLeft="10.0px"
-            android:paddingTop="15.0px"
-            android:layout_width="170.0px"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="0.0dip"
-            android:layout_marginRight="10.0dip"
-            android:text="测试频道"
-            android:singleLine="true"
-            android:layout_toRightOf="@+id/iv_back_bg"
-            android:layout_alignParentTop="true"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:paddingStart="10.0px"
-            android:layout_marginStart="0.0dip"
-            android:layout_toEndOf="@+id/iv_back_bg"/>
-        <TextView
-            android:textSize="24.0px"
-            android:textColor="#fffcffff"
-            android:ellipsize="marquee"
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:id="@+id/tv_right_top_type"
-            android:paddingLeft="20.0px"
-            android:paddingBottom="10.0px"
-            android:layout_width="170.0px"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="0.0dip"
-            android:layout_marginRight="10.0dip"
-            android:text="回看中"
-            android:singleLine="true"
-            android:layout_alignLeft="@+id/tv_right_top_epg_name"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:paddingStart="20.0px"
-            android:layout_marginStart="0.0dip"
-            android:layout_marginEnd="0.0dip"
-            android:layout_alignStart="@+id/tv_right_top_epg_name"
-            android:layout_alignParentEnd="true"/>
     </RelativeLayout>
     <RelativeLayout
         android:layout_gravity="center|right|top"
