--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -343,6 +343,7 @@
                 android:textColor="@color/color_FFFFFF"
                 android:layout_gravity="center"
                 android:paddingRight="@dimen/vs_10"
+				android:paddingLeft="@dimen/vs_10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/vs_5"
@@ -354,6 +355,7 @@
                 android:clipToPadding="false"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
+				android:paddingRight="@dimen/vs_10"
                 app:tv_horizontalSpacingWithMargins="@dimen/vs_5"
                 app:tv_selectedItemIsCentered="true"
                 app:tv_verticalSpacingWithMargins="@dimen/vs_5" />
