--- a/app/src/main/res/layout/player_vod_control_view.xml
+++ b/app/src/main/res/layout/player_vod_control_view.xml
@@ -111,15 +111,15 @@
             <TextView
                 android:textSize="@dimen/ts_20"
                 android:textColor="@color/color_FFFFFF"
+                android:id="@+id/mxuplay"
+                android:background="@drawable/button_dialog_main_1"
+                android:padding="@dimen/vs_10"
                 android:paddingRight="@dimen/vs_10"
+                android:focusable="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/vs_5"
                 android:text="读取中"
-                android:id="@+id/mxuplay"  
-                android:focusable="true" 
-                android:padding="@dimen/vs_10"   
-                android:background="@drawable/button_dialog_main_1"
                 android:singleLine="true"
                 android:layout_marginEnd="@dimen/vs_5" />
             <TextView
@@ -342,8 +342,8 @@
                 android:textSize="@dimen/ts_20"
                 android:textColor="@color/color_FFFFFF"
                 android:layout_gravity="center"
+                android:paddingLeft="@dimen/vs_10"
                 android:paddingRight="@dimen/vs_10"
-				android:paddingLeft="@dimen/vs_10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="@dimen/vs_5"
@@ -351,11 +351,11 @@
                 android:layout_marginEnd="@dimen/vs_5" />
             <com.owen.tvrecyclerview.widget.TvRecyclerView
                 android:id="@+id/mGridView"
+                android:paddingRight="@dimen/vs_10"
                 android:clipChildren="false"
                 android:clipToPadding="false"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-				android:paddingRight="@dimen/vs_10"
                 app:tv_horizontalSpacingWithMargins="@dimen/vs_5"
                 app:tv_selectedItemIsCentered="true"
                 app:tv_verticalSpacingWithMargins="@dimen/vs_5" />
@@ -411,7 +411,7 @@
         android:layout_height="fill_parent">
         <LinearLayout
             android:layout_gravity="left"
-            android:orientation="vertical"
+            android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/vs_20"
@@ -429,6 +429,19 @@
                 android:layout_height="wrap_content"
                 android:text="http://"
                 android:maxLines="3" />
+       <TextView
+            android:textSize="@dimen/ts_40"
+            android:textColor="@android:color/white"
+            android:ellipsize="end"
+            android:layout_gravity="right"
+            android:id="@+id/tv_sys_time_xu"
+            android:tag="vod_control_pause_time"
+            android:paddingTop="@dimen/vs_30"
+            android:paddingRight="@dimen/vs_15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="00:00:00"
+            android:maxLines="1" />                
         </LinearLayout>
         <LinearLayout
             android:gravity="center"
